--- a/css/style.css
+++ b/css/style.css
@@ -486,6 +486,18 @@ main.container {
   position: relative;
   padding-left: 0;
 }
+.genre-tree__item{
+  position: relative;
+  padding-left: 12px;
+}
+.genre-tree__item::before{
+  content: "";
+  position: absolute;
+  left: -18px;
+  top: 16px;
+  width: 12px;
+  border-top: 1px solid var(--line);
+}
 /* ===== Modal (info) ===== */
 .modal-overlay[hidden]{ display:none; }
 .modal-overlay{
