--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,15 @@ main.container {
     justify-content: flex-end;
   }
 }
+.group-card {
+    width: 100%;
+    background: var(--card);
+    border: solid 1px var(--line);
+    border-radius: 12px;
+    padding: 15px;
+    box-shadow: var(--shadow);
+    margin-top: 20px;
+}
 .item-card{
   border: 1px solid var(--line);
   border-radius: 16px;
